--- a/apps/api-extractor/package.json
+++ b/apps/api-extractor/package.json
@@ -31,7 +31,7 @@
     "@microsoft/node-core-library": "0.3.20",
     "@microsoft/ts-command-line": "2.2.8",
     "@types/fs-extra": "0.0.37",
-    "@types/node": "6.0.88",
+    "@types/node": "*",
     "@types/z-schema": "3.16.31",
     "colors": "~1.1.2",
     "fs-extra": "~0.26.7",
@@ -45,6 +45,6 @@
     "@types/lodash": "4.14.74",
     "gulp": "~3.9.1",
     "@microsoft/node-library-build": "4.2.3",
-    "@types/jest": "~20.0.4"
+    "@types/jest": "~21.1.5"
   }
 }
