--- a/core-build/gulp-core-build-typescript/package.json
+++ b/core-build/gulp-core-build-typescript/package.json
@@ -18,7 +18,7 @@
     "@microsoft/node-core-library": "0.3.20",
     "@types/fs-extra": "0.0.37",
     "@types/gulp": "3.8.33",
-    "@types/node": "6.0.88",
+    "@types/node": "*",
     "fs-extra": "~0.26.7",
     "gulp": "~3.9.1",
     "gulp-cache": "~0.4.5",
