--- a/libraries/node-core-library/package.json
+++ b/libraries/node-core-library/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@types/fs-extra": "0.0.37",
-    "@types/node": "6.0.88",
+    "@types/node": "*",
     "@types/z-schema": "3.16.31",
     "fs-extra": "~0.26.7",
     "jju": "~1.3.0",
