--- a/common/config/rush/shrinkwrap.yaml
+++ b/common/config/rush/shrinkwrap.yaml
@@ -47,7 +47,7 @@ dependencies:
   '@types/mime': 0.0.29
   '@types/minimatch': 2.0.29
   '@types/mocha': 2.2.38
-  '@types/node': 6.0.88
+  '@types/node': 8.0.58
   '@types/node-forge': 0.6.8
   '@types/node-notifier': 0.0.28
   '@types/orchestrator': 0.3.0
@@ -9976,7 +9976,7 @@ packages:
       '@types/fs-extra': 0.0.37
       '@types/jest': 21.1.8
       '@types/js-yaml': 3.9.1
-      '@types/node': 6.0.88
+      '@types/node': 8.0.58
       colors: 1.1.2
       fs-extra: 0.26.7
       gulp: 3.9.1
@@ -9993,7 +9993,7 @@ packages:
       '@types/fs-extra': 0.0.37
       '@types/jest': 20.0.8
       '@types/lodash': 4.14.74
-      '@types/node': 6.0.88
+      '@types/node': 8.0.58
       '@types/z-schema': 3.16.31
       colors: 1.1.2
       fs-extra: 0.26.7
@@ -10011,7 +10011,7 @@ packages:
     dependencies:
       '@types/chai': 3.4.34
       '@types/mocha': 2.2.38
-      '@types/node': 6.0.88
+      '@types/node': 8.0.58
       chai: 3.5.0
       gulp: 3.9.1
     dev: false
@@ -10056,7 +10056,7 @@ packages:
       '@types/gulp-istanbul': 0.9.30
       '@types/gulp-mocha': 0.0.29
       '@types/mocha': 2.2.38
-      '@types/node': 6.0.88
+      '@types/node': 8.0.58
       '@types/orchestrator': 0.3.0
       '@types/q': 0.0.32
       gulp: 3.9.1
@@ -10075,7 +10075,7 @@ packages:
       '@types/gulp': 3.8.33
       '@types/gulp-util': 3.0.30
       '@types/mime': 0.0.29
-      '@types/node': 6.0.88
+      '@types/node': 8.0.58
       '@types/orchestrator': 0.3.0
       '@types/q': 0.0.32
       '@types/serve-static': 1.7.31
@@ -10104,7 +10104,7 @@ packages:
       '@types/gulp': 3.8.33
       '@types/gulp-util': 3.0.30
       '@types/mime': 0.0.29
-      '@types/node': 6.0.88
+      '@types/node': 8.0.58
       '@types/node-forge': 0.6.8
       '@types/orchestrator': 0.3.0
       '@types/q': 0.0.32
@@ -10131,7 +10131,7 @@ packages:
       '@types/fs-extra': 0.0.37
       '@types/gulp': 3.8.33
       '@types/gulp-util': 3.0.30
-      '@types/node': 6.0.88
+      '@types/node': 8.0.58
       '@types/orchestrator': 0.3.0
       '@types/q': 0.0.32
       '@types/through2': 2.0.32
@@ -10163,7 +10163,7 @@ packages:
     dependencies:
       '@microsoft/node-library-build': 4.2.3
       '@types/gulp': 3.8.33
-      '@types/node': 6.0.88
+      '@types/node': 8.0.58
       '@types/orchestrator': 0.3.0
       '@types/q': 0.0.32
       '@types/source-map': 0.5.0
@@ -10186,7 +10186,7 @@ packages:
       '@types/gulp': 3.8.33
       '@types/gulp-util': 3.0.30
       '@types/mocha': 2.2.38
-      '@types/node': 6.0.88
+      '@types/node': 8.0.58
       '@types/node-notifier': 0.0.28
       '@types/orchestrator': 0.3.0
       '@types/q': 0.0.32
@@ -10242,7 +10242,7 @@ packages:
     dependencies:
       '@types/loader-utils': 1.1.0
       '@types/mocha': 2.2.38
-      '@types/node': 6.0.88
+      '@types/node': 8.0.58
       '@types/webpack': 3.0.11
       chai: 3.5.0
       gulp: 3.9.1
@@ -10255,7 +10255,7 @@ packages:
   'file:projects/loader-raw-script.tgz':
     dependencies:
       '@types/mocha': 2.2.38
-      '@types/node': 6.0.88
+      '@types/node': 8.0.58
       chai: 3.5.0
       gulp: 3.9.1
       loader-utils: 1.1.0
@@ -10269,7 +10269,7 @@ packages:
     dependencies:
       '@types/lodash': 4.14.74
       '@types/mocha': 2.2.38
-      '@types/node': 6.0.88
+      '@types/node': 8.0.58
       chai: 3.5.0
       gulp: 3.9.1
       loader-utils: 1.1.0
@@ -10286,7 +10286,7 @@ packages:
       '@types/chai': 3.4.34
       '@types/fs-extra': 0.0.37
       '@types/mocha': 2.2.38
-      '@types/node': 6.0.88
+      '@types/node': 8.0.58
       '@types/z-schema': 3.16.31
       chai: 3.5.0
       fs-extra: 0.26.7
@@ -10302,7 +10302,7 @@ packages:
   'file:projects/node-library-build.tgz':
     dependencies:
       '@types/gulp': 3.8.33
-      '@types/node': 6.0.88
+      '@types/node': 8.0.58
       gulp: 3.9.1
     dev: false
     name: '@rush-temp/node-library-build'
@@ -10313,7 +10313,7 @@ packages:
     dependencies:
       '@types/chai': 3.4.34
       '@types/mocha': 2.2.38
-      '@types/node': 6.0.88
+      '@types/node': 8.0.58
       chai: 3.5.0
       gulp: 3.9.1
     dev: false
@@ -10344,7 +10344,7 @@ packages:
       '@types/lodash': 4.14.74
       '@types/minimatch': 2.0.29
       '@types/mocha': 2.2.38
-      '@types/node': 6.0.88
+      '@types/node': 8.0.58
       '@types/semver': 5.3.33
       '@types/sinon': 1.16.34
       '@types/z-schema': 3.16.31
@@ -10381,7 +10381,7 @@ packages:
       '@types/chai': 3.4.34
       '@types/fs-extra': 0.0.37
       '@types/mocha': 2.2.38
-      '@types/node': 6.0.88
+      '@types/node': 8.0.58
       '@types/semver': 5.3.33
       '@types/sinon': 1.16.34
       chai: 3.5.0
@@ -10398,7 +10398,7 @@ packages:
     dependencies:
       '@types/lodash': 4.14.74
       '@types/mocha': 2.2.38
-      '@types/node': 6.0.88
+      '@types/node': 8.0.58
       '@types/tapable': 0.2.3
       '@types/uglify-js': 2.6.29
       '@types/webpack': 3.0.11
@@ -10417,7 +10417,7 @@ packages:
       '@types/chai': 3.4.34
       '@types/colors': 1.1.3
       '@types/mocha': 2.2.38
-      '@types/node': 6.0.88
+      '@types/node': 8.0.58
       chai: 3.5.0
       colors: 1.1.2
       gulp: 3.9.1
@@ -10431,7 +10431,7 @@ packages:
     dependencies:
       '@types/chai': 3.4.34
       '@types/jest': 21.1.8
-      '@types/node': 6.0.88
+      '@types/node': 8.0.58
       chai: 3.5.0
       gulp: 3.9.1
     dev: false
@@ -10444,7 +10444,7 @@ packages:
       '@microsoft/node-library-build': 4.2.3
       '@types/argparse': 1.0.33
       '@types/colors': 1.1.3
-      '@types/node': 6.0.88
+      '@types/node': 8.0.58
       argparse: 1.0.9
       chai: 3.5.0
       colors: 1.1.2
@@ -10458,7 +10458,7 @@ packages:
   'file:projects/web-library-build.tgz':
     dependencies:
       '@types/gulp': 3.8.33
-      '@types/node': 6.0.88
+      '@types/node': 8.0.58
       gulp: 3.9.1
       gulp-replace: 0.5.4
     dev: false
@@ -10518,7 +10518,7 @@ specifiers:
   '@types/mime': 0.0.29
   '@types/minimatch': 2.0.29
   '@types/mocha': 2.2.38
-  '@types/node': 6.0.88
+  '@types/node': '*'
   '@types/node-forge': 0.6.8
   '@types/node-notifier': 0.0.28
   '@types/orchestrator': 0.3.0
