Update gulp-core-build and node-library-build

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -4,6 +4,10 @@
     {
       "name": "chalk",
       "allowedCategories": [ "libraries" ]
+    },
+    {
+      "name": "jest-resolve",
+      "allowedCategories": [ "libraries" ]
     }
   ]
 }
