--- a/core-build/gulp-core-build/package.json
+++ b/core-build/gulp-core-build/package.json
@@ -52,11 +52,12 @@
     "yargs": "~4.6.0",
     "z-schema": "~3.18.3",
     "jest-cli": "~21.2.1",
+    "jest-resolve": "~21.2.0",
     "jest": "~21.2.1"
   },
   "devDependencies": {
     "@types/z-schema": "3.16.31",
-    "@microsoft/node-library-build": "4.2.3",
+    "@microsoft/node-library-build": "4.2.13",
     "chai": "~3.5.0"
   }
 }
