move things into appropriate list

--- a/common/config/rush/nonbrowser-approved-packages.json
+++ b/common/config/rush/nonbrowser-approved-packages.json
@@ -93,6 +93,10 @@
       "name": "chai",
       "allowedCategories": [ "libraries", "other" ]
     },
+     {
+      "name": "chalk",
+      "allowedCategories": [ "libraries" ]
+    },
     {
       "name": "colors",
       "allowedCategories": [ "libraries" ]
@@ -240,6 +244,10 @@
     {
       "name": "jest-cli",
       "allowedCategories": [ "libraries", "other" ]
+    },
+    {
+      "name": "jest-resolve",
+      "allowedCategories": [ "libraries" ]
     },
     {
       "name": "jju",
