--- a/core-build/gulp-core-build-karma/package.json
+++ b/core-build/gulp-core-build-karma/package.json
@@ -38,7 +38,7 @@
     "@types/gulp": "3.8.33",
     "@types/karma": "0.13.33",
     "@types/log4js": "0.0.33",
-    "@types/node": "^8.0.0",
+    "@types/node": "6.0.88",
     "@types/bluebird": "3.5.3"
   }
 }
