--- a/apps/api-documenter/package.json
+++ b/apps/api-documenter/package.json
@@ -27,7 +27,7 @@
     "@types/colors": "1.1.3",
     "@types/fs-extra": "0.0.37",
     "@types/js-yaml": "3.9.1",
-    "@types/node": "^8.0.0",
+    "@types/node": "6.0.88",
     "gulp": "~3.9.1",
     "@types/jest": "~21.1.8"
   }
