--- a/core-build/gulp-core-build-sass/package.json
+++ b/core-build/gulp-core-build-sass/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@microsoft/gulp-core-build": "3.3.4",
     "@microsoft/load-themed-styles": "1.7.16",
-    "@types/node": "^8.0.0",
+    "@types/node": "6.0.88",
     "autoprefixer": "6.3.7",
     "gulp": "~3.9.1",
     "gulp-clean-css": "~3.0.4",
