--- a/core-build/gulp-core-build-webpack/package.json
+++ b/core-build/gulp-core-build-webpack/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@microsoft/gulp-core-build": "3.3.4",
     "@types/gulp": "3.8.33",
-    "@types/node": "^8.0.0",
+    "@types/node": "6.0.88",
     "gulp": "~3.9.1",
     "gulp-util": "~3.0.7",
     "webpack": "~3.6.0"
