--- a/core-build/node-library-build/package.json
+++ b/core-build/node-library-build/package.json
@@ -17,7 +17,7 @@
     "@microsoft/gulp-core-build-mocha": "3.2.14",
     "@microsoft/gulp-core-build-typescript": "4.3.2",
     "@types/gulp": "3.8.33",
-    "@types/node": "^8.0.0",
+    "@types/node": "6.0.88",
     "gulp": "~3.9.1"
   },
   "devDependencies": {}
