--- a/webpack/loader-set-webpack-public-path/package.json
+++ b/webpack/loader-set-webpack-public-path/package.json
@@ -10,7 +10,7 @@
     "build": "gulp test --clean"
   },
   "dependencies": {
-    "@types/node": "^8.0.0",
+    "@types/node": "6.0.88",
     "@microsoft/set-webpack-public-path-plugin": "1.3.11",
     "loader-utils": "~1.1.0",
     "lodash": "~4.15.0"
