--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,11 @@
 			"name": "Launch",
 			"type": "node",
 			"request": "launch",
-			"program": "${workspaceRoot}/common/temp/node_modules/gulp/bin/gulp.js",
+			"program": "${workspaceRoot}/common/node_modules/gulp/bin/gulp.js",
 			"stopOnEntry": false,
 			"args": [
-				"test"
 			],
-			"cwd": "${workspaceRoot}/apps/api-documenter",
+			"cwd": "${workspaceRoot}/gulp-core-build",
 			"runtimeExecutable": null,
 			"runtimeArgs": [
 				"--nolazy"
