Added api-extractor-test-03 which consumes api-extractor-test-02

--- a/common/config/rush/nonbrowser-approved-packages.json
+++ b/common/config/rush/nonbrowser-approved-packages.json
@@ -82,6 +82,10 @@
       "allowedCategories": [ "tests" ]
     },
     {
+      "name": "api-extractor-test-02",
+      "allowedCategories": [ "tests" ]
+    },
+    {
       "name": "argparse",
       "allowedCategories": [ "libraries" ]
     },
