Get web-build-tools using PNPM (#383)
Late last year, we added support in Rush for the PNPM package manager. PNPM has several advantages over NPM, including performance, disk efficiency, rigor and simplicity. The primary idea behind PNPM is to only install packages a single time, then construct the dependency tree using symlinks. By comparison, NPM imposes a tree hierarchy that often requires crazy duplication of folders containing the same contents.

We just enabled pnpm for use in the web-build-tools repository!

Some of the benefits of this are:

•	pnpm fixes the annoying race condition issue in npm which has been causing grief for many people!

•	Disk efficiency - unlike npm, pnpm will install a specific version of a package only once on disk, saving many gigabytes (reducing node_modules folder size from 10-30%).

•	Performance – since pnpm only install packages a single time, then constructs the dependency graph using much cheaper symlinks, it is also much faster than npm. This in turn makes rush install & rush generate much faster.

•	Unlike npm, pnpm doesn’t care about the existing contents of your node modules folder, it will always construct the same dependency graph (assuming identical network timings). This massively improves performance of “rush generate” because we no longer have to delete the node modules folder and do a full re-install.

•	Rigor – pnpm only creates links for top-level dependencies in the node_modules folder. This means you can’t accidentally require() things that aren’t in your package.json, which can lead to strange errors for consumers of your library.

•	Actively maintained TypeScript – In our experience, npm has been plagued with regressions and design problems, whereas pnpm is an actively maintained project that is written in TypeScript for type safety.

•	Simplicity – there are cases with npm where you might require foo@2.0.0 in two places, only to find out that the implementations of foo@2.0.0 are different be

--- a/common/config/rush/nonbrowser-approved-packages.json
+++ b/common/config/rush/nonbrowser-approved-packages.json
@@ -246,6 +246,10 @@
       "allowedCategories": [ "libraries", "other" ]
     },
     {
+      "name": "jest-resolve",
+      "allowedCategories": [ "libraries" ]
+    },
+    {
       "name": "jju",
       "allowedCategories": [ "libraries" ]
     },
