--- a/core-build/gulp-core-build-serve/package.json
+++ b/core-build/gulp-core-build-serve/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@microsoft/gulp-core-build": "3.3.6",
     "@types/node": "6.0.88",
+    "chalk": "~2.1.0",
     "deasync": "~0.1.7",
     "express": "~4.14.0",
     "gulp": "~3.9.1",
