--- a/core-build/gulp-core-build/package.json
+++ b/core-build/gulp-core-build/package.json
@@ -52,6 +52,7 @@
     "yargs": "~4.6.0",
     "z-schema": "~3.18.3",
     "jest-cli": "~21.2.1",
+    "jest-environment-jsdom": "~21.2.0",
     "jest-resolve": "~21.2.0",
     "jest": "~21.2.1"
   },
