--- a/libraries/node-core-library/package.json
+++ b/libraries/node-core-library/package.json
@@ -3,7 +3,7 @@
   "version": "0.4.3",
   "description": "Core libraries that every NodeJS toolchain project should use",
   "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
+  "typings": "dist/index-internal.d.ts",
   "license": "MIT",
   "scripts": {
     "build": "gulp test --clean"
