--- a/common/config/rush/shrinkwrap.yaml
+++ b/common/config/rush/shrinkwrap.yaml
@@ -9444,7 +9444,9 @@ packages:
     dependencies:
       '@types/jest': 21.1.10
       '@types/node': 8.5.8
+      '@types/semver': 5.3.33
       fs-extra: 0.26.7
+      semver: 5.3.0
       typescript: 2.4.2
     dev: false
     name: '@rush-temp/api-extractor-test-02'
