--- a/apps/api-extractor/package.json
+++ b/apps/api-extractor/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "http://aka.ms/extractor",
   "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
+  "typings": "dist/index-internal.d.ts",
   "bin": {
     "api-extractor": "./bin/api-extractor"
   },
