--- a/apps/rush-lib/package.json
+++ b/apps/rush-lib/package.json
@@ -8,7 +8,7 @@
   },
   "homepage": "http://aka.ms/rush",
   "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
+  "typings": "dist/index-internal.d.ts",
   "scripts": {
     "build": "gulp test --clean"
   },
