--- a/libraries/package-deps-hash/package.json
+++ b/libraries/package-deps-hash/package.json
@@ -3,7 +3,7 @@
   "version": "2.2.4",
   "description": "",
   "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
+  "typings": "dist/index-internal.d.ts",
   "license": "MIT",
   "repository": {
     "type": "git",
