--- a/libraries/ts-command-line/package.json
+++ b/libraries/ts-command-line/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/microsoft/web-build-tools"
   },
   "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
+  "typings": "dist/index-internal.d.ts",
   "scripts": {
     "build": "gulp test --clean"
   },
