Upgrade gulp-connect & typings, remove unused dependencies, add connect-livereload as direct dependency

--- a/common/config/rush/nonbrowser-approved-packages.json
+++ b/common/config/rush/nonbrowser-approved-packages.json
@@ -110,6 +110,10 @@
       "allowedCategories": [ "libraries" ]
     },
     {
+      "name": "connect-livereload",
+      "allowedCategories": [ "libraries" ]
+    },
+    {
       "name": "deasync",
       "allowedCategories": [ "libraries" ]
     },
