--- a/core-build/gulp-core-build-serve/package.json
+++ b/core-build/gulp-core-build-serve/package.json
@@ -17,9 +17,10 @@
     "@types/node": "8.5.8",
     "chalk": "~2.1.0",
     "deasync": "~0.1.7",
-    "express": "~4.14.0",
+    "express": "~4.16.2",
     "gulp": "~3.9.1",
-    "gulp-connect": "~5.0.0",
+    "gulp-connect": "~5.2.0",
+    "connect-livereload": "^0.5.4",
     "gulp-open": "~2.0.0",
     "gulp-util": "~3.0.7",
     "node-forge": "~0.7.1",
@@ -27,15 +28,15 @@
   },
   "devDependencies": {
     "@microsoft/node-library-build": "4.3.4",
-    "@types/express": "4.0.35",
-    "@types/express-serve-static-core": "4.0.41",
+    "@types/express": "4.11.0",
+    "@types/express-serve-static-core": "4.11.0",
     "@types/gulp": "3.8.32",
     "@types/gulp-util": "3.0.30",
     "@types/mime": "0.0.29",
     "@types/node-forge": "0.6.8",
     "@types/orchestrator": "0.0.30",
     "@types/q": "0.0.32",
-    "@types/serve-static": "1.7.31",
+    "@types/serve-static": "1.13.1",
     "@types/through2": "2.0.32",
     "@types/vinyl": "1.2.30"
   }
