--- a/core-build/gulp-core-build-serve/package.json
+++ b/core-build/gulp-core-build-serve/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@microsoft/gulp-core-build": "3.5.0",
     "@types/node": "8.5.8",
-    "chalk": "~2.1.0",
+    "colors": "~1.1.2",
     "deasync": "~0.1.7",
     "express": "~4.16.2",
     "gulp": "~3.9.1",
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@microsoft/node-library-build": "4.3.5",
+    "@types/colors": "1.1.3",
     "@types/express": "4.11.0",
     "@types/express-serve-static-core": "4.11.0",
     "@types/gulp": "3.8.32",
