--- a/core-build/gulp-core-build/package.json
+++ b/core-build/gulp-core-build/package.json
@@ -16,7 +16,8 @@
     "@microsoft/node-core-library": "0.4.6",
     "@types/assertion-error": "1.0.30",
     "@types/chai": "3.4.34",
-    "@types/chalk": "0.4.31",
+    "@types/chalk": "2.2.0",
+    "@types/colors": "1.1.3",
     "@types/gulp": "3.8.32",
     "@types/gulp-util": "3.0.30",
     "@types/mocha": "2.2.38",
@@ -29,10 +30,11 @@
     "@types/through2": "2.0.32",
     "@types/vinyl": "1.2.30",
     "@types/yargs": "0.0.34",
-    "chalk": "~2.1.0",
+    "colors": "~1.1.2",
     "del": "^2.2.2",
     "end-of-stream": "~1.1.0",
     "fs-extra": "~0.26.7",
+    "fancy-log": "~1.3.2",
     "glob-escape": "~0.0.1",
     "globby": "~5.0.0",
     "gulp": "~3.9.1",
@@ -57,6 +59,7 @@
     "jest": "~21.2.1"
   },
   "devDependencies": {
+    "@types/fancy-log": "1.3.0",
     "@types/z-schema": "3.16.31",
     "@microsoft/node-library-build": "4.3.5",
     "chai": "~3.5.0"
