--- a/common/config/rush/nonbrowser-approved-packages.json
+++ b/common/config/rush/nonbrowser-approved-packages.json
@@ -126,6 +126,10 @@
       "allowedCategories": [ "libraries" ]
     },
     {
+      "name": "fancy-log",
+      "allowedCategories": [ "libraries" ]
+    },
+    {
       "name": "fs-extra",
       "allowedCategories": [ "libraries", "tests" ]
     },
