--- a/libraries/ts-command-line/tsconfig.json
+++ b/libraries/ts-command-line/tsconfig.json
@@ -11,7 +11,8 @@
       "node"
     ],
     "lib": [
-      "es6",
+      "es5",
+      "es2015.promise",
       "es2015.iterable",
       "es2015.collection"
     ]
