--- a/apps/rush-lib/package.json
+++ b/apps/rush-lib/package.json
@@ -6,6 +6,10 @@
     "type": "git",
     "url": "https://github.com/microsoft/web-build-tools"
   },
+  "engines": {
+    "node": ">=5.6.0"
+  },
+  "engineStrict": true,
   "homepage": "http://aka.ms/rush",
   "main": "lib/index.js",
   "typings": "dist/index-internal.d.ts",
