--- a/apps/rush-lib/src/cli/logic/test/shrinkwrapFile/shrinkwrap.yaml
+++ b/apps/rush-lib/src/cli/logic/test/shrinkwrapFile/shrinkwrap.yaml
@@ -1,9 +1,12 @@
 dependencies:
   '@rush-temp/project1': 'file:./projects/project1.tgz'
   '@rush-temp/project2': 'file:./projects/project2.tgz'
-  jquery: 2.9.9
+  '@rush-temp/project3': 'file:./projects/project3.tgz'
 packages:
-  /jquery/2.2.2:
+  /jquery/1.0.0:
+    resolution:
+      integrity: sha1-PjAtxh6zKaIenvrJN9cx8GETTFk=
+  /jquery/2.9.9:
     resolution:
       integrity: sha1-PjAtxh6zKaIenvrJN9cx8GETTFk=
   /q/1.5.3:
@@ -18,10 +21,14 @@ packages:
   'file:projects/project2.tgz':
     dependencies:
       q: 1.5.3
+      jquery: 1.0.0
+  'file:projects/project3.tgz':
+    dependencies:
+      q: 1.5.3
 registry: 'http://localhost:4873/'
 shrinkwrapVersion: 3
 specifiers:
   '@rush-temp/project1': 'file:./projects/project1.tgz'
   '@rush-temp/project2': 'file:./projects/project2.tgz'
-  jquery: '>=2.2.4 <3.0.0'
+  '@rush-temp/project3': 'file:./projects/project3.tgz'
   q: '~1.5.0'
