Pin karma-webpack to 3.0.9, since 3.0.12 has an issue with a missing dependency in package.json

--- a/core-build/gulp-core-build-karma/package.json
+++ b/core-build/gulp-core-build-karma/package.json
@@ -24,7 +24,7 @@
     "karma-mocha-clean-reporter": "~0.0.1",
     "karma-phantomjs-launcher": "~1.0.0",
     "karma-sinon-chai": "~1.2.0",
-    "karma-webpack": "~2.0.4",
+    "karma-webpack": "2.0.9",
     "lolex": "~1.4.0",
     "mocha": "~3.4.2",
     "phantomjs-polyfill": "~0.0.2",
