--- a/apps/api-extractor/.vscode/launch.json
+++ b/apps/api-extractor/.vscode/launch.json
@@ -4,13 +4,13 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+
     {
       "type": "node",
       "request": "launch",
       "name": "test-01",
       "program": "${workspaceFolder}/lib/start.js",
       "cwd": "${workspaceFolder}/../../build-tests/api-extractor-test-01",
-      "sourceMaps": false,
       "args": [
         "run",
         "-l"
@@ -22,7 +22,17 @@
       "name": "test-02",
       "program": "${workspaceFolder}/lib/start.js",
       "cwd": "${workspaceFolder}/../../build-tests/api-extractor-test-02",
-      "sourceMaps": false,
+      "args": [
+        "run",
+        "-l"
+      ]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "test-04",
+      "program": "${workspaceFolder}/lib/start.js",
+      "cwd": "${workspaceFolder}/../../build-tests/api-extractor-test-04",
       "args": [
         "run",
         "-l"
