--- a/apps/api-documenter/package.json
+++ b/apps/api-documenter/package.json
@@ -29,6 +29,6 @@
     "@types/js-yaml": "3.9.1",
     "@types/node": "8.5.8",
     "gulp": "~3.9.1",
-    "@types/jest": "~21.1.8"
+    "@types/jest": "21.1.10"
   }
 }
