--- a/apps/api-extractor/package.json
+++ b/apps/api-extractor/package.json
@@ -45,6 +45,6 @@
     "@types/lodash": "4.14.74",
     "gulp": "~3.9.1",
     "@microsoft/node-library-build": "4.3.13",
-    "@types/jest": "~21.1.8"
+    "@types/jest": "21.1.10"
   }
 }
