--- a/libraries/ts-command-line/package.json
+++ b/libraries/ts-command-line/package.json
@@ -14,7 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "argparse": "~1.0.9",
-    "@types/argparse": "~1.0.33",
+    "@types/argparse": "1.0.33",
     "colors": "~1.1.2",
     "@types/node": "8.5.8"
   },
