--- a/core-build/gulp-core-build-webpack/package.json
+++ b/core-build/gulp-core-build-webpack/package.json
@@ -27,6 +27,7 @@
     "@types/orchestrator": "0.0.30",
     "@types/q": "0.0.32",
     "@types/source-map": "0.5.0",
+    "@types/tapable": "0.2.4",
     "@types/uglify-js": "2.6.29",
     "@types/webpack": "3.0.11"
   }
