Add "tsdoc" fields to all package.json files that generate *.d.ts files

--- a/libraries/decorators/package.json
+++ b/libraries/decorators/package.json
@@ -8,6 +8,9 @@
   },
   "main": "lib/index.js",
   "typings": "dist/index-internal.d.ts",
+  "tsdoc": {
+    "tsdocFlavor": "AEDoc"
+  },
   "license": "MIT",
   "devDependencies": {
     "@microsoft/node-library-build": "4.3.22",
