--- a/libraries/node-core-library/package.json
+++ b/libraries/node-core-library/package.json
@@ -4,6 +4,9 @@
   "description": "Core libraries that every NodeJS toolchain project should use",
   "main": "lib/index.js",
   "typings": "dist/index-internal.d.ts",
+  "tsdoc": {
+    "tsdocFlavor": "AEDoc"
+  },
   "license": "MIT",
   "scripts": {
     "build": "gulp test --clean"
