--- a/apps/rush-lib/package.json
+++ b/apps/rush-lib/package.json
@@ -13,6 +13,9 @@
   "homepage": "http://aka.ms/rush",
   "main": "lib/index.js",
   "typings": "dist/index-internal.d.ts",
+  "tsdoc": {
+    "tsdocFlavor": "AEDoc"
+  },
   "scripts": {
     "build": "gulp test --clean"
   },
