--- a/libraries/ts-command-line/package.json
+++ b/libraries/ts-command-line/package.json
@@ -8,6 +8,9 @@
   },
   "main": "lib/index.js",
   "typings": "dist/index-internal.d.ts",
+  "tsdoc": {
+    "tsdocFlavor": "AEDoc"
+  },
   "scripts": {
     "build": "gulp test --clean"
   },
