--- a/apps/rush/package.json
+++ b/apps/rush/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@microsoft/node-core-library": "1.0.0",
     "@microsoft/rush-lib": "4.3.0",
+    "colors": "~1.1.2",
     "fs-extra": "~0.26.7",
     "semver": "~5.3.0"
   },
