--- a/libraries/package-deps-hash/package.json
+++ b/libraries/package-deps-hash/package.json
@@ -3,7 +3,7 @@
   "version": "2.2.26",
   "description": "",
   "main": "lib/index.js",
-  "typings": "dist/index-internal.d.ts",
+  "typings": "dist/package-deps-hash.d.ts",
   "tsdoc": {
     "tsdocFlavor": "AEDoc"
   },
