--- a/libraries/stream-collator/package.json
+++ b/libraries/stream-collator/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/microsoft/web-build-tools"
   },
   "main": "lib/index.js",
-  "typings": "dist/index-internal.d.ts",
+  "typings": "dist/stream-collator.d.ts",
   "tsdoc": {
     "tsdocFlavor": "AEDoc"
   },
