--- a/apps/rush-lib/package.json
+++ b/apps/rush-lib/package.json
@@ -25,9 +25,6 @@
     "@microsoft/package-deps-hash": "2.2.31",
     "@microsoft/stream-collator": "2.2.31",
     "@microsoft/ts-command-line": "3.1.1",
-    "@types/fs-extra": "0.0.37",
-    "@types/node": "8.5.8",
-    "@types/z-schema": "3.16.31",
     "builtins": "~1.0.3",
     "colors": "~1.2.1",
     "fs-extra": "~0.26.7",
@@ -44,12 +41,16 @@
     "rimraf": "~2.5.4",
     "semver": "~5.3.0",
     "strict-uri-encode": "~2.0.0",
-    "tar": "~3.1.12",
+    "tar": "~4.4.1",
     "wordwrap": "~1.0.0",
     "z-schema": "~3.18.3"
   },
   "devDependencies": {
     "@microsoft/node-library-build": "4.3.31",
+    "@types/fs-extra": "0.0.37",
+    "@types/node": "8.5.8",
+    "@types/tar": "4.0.0",
+    "@types/z-schema": "3.16.31",
     "chai": "~3.5.0",
     "gulp": "~3.9.1",
     "mocha": "~3.4.2",
