--- a/apps/rush-lib/package.json
+++ b/apps/rush-lib/package.json
@@ -25,6 +25,8 @@
     "@microsoft/package-deps-hash": "2.2.31",
     "@microsoft/stream-collator": "2.2.31",
     "@microsoft/ts-command-line": "3.1.1",
+    "@pnpm/link-bins": "~1.0.1",
+    "@pnpm/logger": "~1.0.1",
     "builtins": "~1.0.3",
     "colors": "~1.2.1",
     "fs-extra": "~0.26.7",
