Set up rush-stack-compiler with "rush-" wrappers for tsc, tslint, and api-extractor

--- a/rush-stack/package.json
+++ b/rush-stack/package.json
@@ -17,5 +17,8 @@
     "@microsoft/node-library-build": "~4.3.31",
     "@types/node": "8.5.8",
     "gulp": "~3.9.1"
+  },
+  "peerDependencies": {
+    "@microsoft/rush-stack-compiler": "*"
   }
 }
