--- a/rush-stack/defaults/tsconfig.json
+++ b/rush-stack/defaults/tsconfig.json
@@ -2,7 +2,7 @@
   "$schema": "http://json.schemastore.org/tsconfig",
 
   "compilerOptions": {
-    "outDir": "lib",
+    "outDir": "../../../../lib",
 
     "target": "es6",
     "forceConsistentCasingInFileNames": true,
@@ -10,9 +10,7 @@
     "declaration": true,
     "sourceMap": true,
     "experimentalDecorators": true,
-    "types": [
-      "node"
-    ],
+    "types": [ ],
     "lib": [
       "es5",
       "scripthost",
@@ -25,7 +23,7 @@
   },
 
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx"
+    "../../../../src/**/*.ts",
+    "../../../../src/**/*.tsx"
   ]
 }
