--- a/libraries/ts-command-line/package.json
+++ b/libraries/ts-command-line/package.json
@@ -22,9 +22,8 @@
     "@types/node": "8.5.8"
   },
   "devDependencies": {
-    "chai": "~3.5.0",
+    "@types/jest": "21.1.10",
     "gulp": "~3.9.1",
-    "mocha": "~3.4.2",
     "@microsoft/node-library-build": "4.3.28"
   }
 }
