--- a/libraries/ts-command-line/tsconfig.json
+++ b/libraries/ts-command-line/tsconfig.json
@@ -8,7 +8,8 @@
     "sourceMap": true,
     "strictNullChecks": true,
     "types": [
-      "node"
+      "node",
+      "jest"
     ],
     "lib": [
       "es5",
