Enable Jest for rush-lib

--- a/apps/rush-lib/tsconfig.json
+++ b/apps/rush-lib/tsconfig.json
@@ -8,7 +8,8 @@
     "declaration": true,
     "sourceMap": true,
     "types": [
-      "node"
+      "node",
+      "jest"
     ],
     "lib": [
       "es5",
