--- a/apps/rush-lib/package.json
+++ b/apps/rush-lib/package.json
@@ -55,15 +55,12 @@
     "@types/z-schema": "3.16.31",
     "chai": "~3.5.0",
     "gulp": "~3.9.1",
-    "mocha": "~3.4.2",
     "sinon": "~1.17.3",
     "@types/glob": "5.0.30",
+    "@types/jest": "21.1.10",
     "@types/js-yaml": "3.9.1",
     "@types/lodash": "4.14.74",
     "@types/minimatch": "2.0.29",
-    "@types/sinon": "1.16.34",
-    "@types/mocha": "2.2.38",
-    "@types/chai": "3.4.34",
     "@types/semver": "5.3.33"
   }
 }
