--- a/libraries/ts-command-line/package.json
+++ b/libraries/ts-command-line/package.json
@@ -19,8 +19,7 @@
     "argparse": "~1.0.9",
     "@types/argparse": "1.0.33",
     "colors": "~1.2.1",
-    "@types/node": "8.5.8",
-    "jest-environment-jsdom": "~21.2.1"
+    "@types/node": "8.5.8"
   },
   "devDependencies": {
     "@types/jest": "21.1.10",
