Add dependencies for node-fetch and https-proxy-agent

--- a/common/config/rush/nonbrowser-approved-packages.json
+++ b/common/config/rush/nonbrowser-approved-packages.json
@@ -254,6 +254,10 @@
       "allowedCategories": [ "libraries" ]
     },
     {
+      "name": "https-proxy-agent",
+      "allowedCategories": [ "libraries" ]
+    },
+    {
       "name": "inquirer",
       "allowedCategories": [ "libraries" ]
     },
@@ -343,6 +347,10 @@
     },
     {
       "name": "mocha",
+      "allowedCategories": [ "libraries" ]
+    },
+    {
+      "name": "node-fetch",
       "allowedCategories": [ "libraries" ]
     },
     {
