--- a/apps/rush-lib/package.json
+++ b/apps/rush-lib/package.json
@@ -33,11 +33,13 @@
     "git-repo-info": "~1.1.4",
     "glob": "~7.0.5",
     "glob-escape": "~0.0.1",
+    "https-proxy-agent": "~2.2.1",
     "inquirer": "~1.2.1",
     "js-yaml": "~3.9.1",
     "jju": "~1.3.0",
     "lodash": "~4.15.0",
     "minimatch": "~3.0.2",
+    "node-fetch": "~2.1.2",
     "npm-package-arg": "~5.1.2",
     "read-package-tree": "~5.1.5",
     "rimraf": "~2.5.4",
@@ -51,6 +53,7 @@
     "@microsoft/node-library-build": "4.3.40",
     "@types/fs-extra": "5.0.1",
     "@types/node": "8.5.8",
+    "@types/node-fetch": "1.6.9",
     "@types/tar": "4.0.0",
     "@types/z-schema": "3.16.31",
     "gulp": "~3.9.1",
