--- a/apps/rush/package.json
+++ b/apps/rush/package.json
@@ -21,7 +21,7 @@
     "node": ">=5.6.0"
   },
   "engineStrict": true,
-  "homepage": "http://aka.ms/rush",
+  "homepage": "https://rushjs.io",
   "scripts": {
     "build": "gulp test --clean"
   },
