Update project-commands.json to follow the same conventions as the revised command-line.schema.json

--- a/stack/rush-stack/includes/project-commands.json
+++ b/stack/rush-stack/includes/project-commands.json
@@ -3,28 +3,30 @@
     {
       "name": "build",
       "summary": "Builds the project",
-      "documentation": "",
-      "script": "../lib/start.js"
+      "description": "",
+      "scriptPath": "../lib/start.js"
     },
     {
       "name": "clean",
       "summary": "Cleans the project",
-      "documentation": "",
-      "script": "../lib/start.js"
+      "description": "",
+      "scriptPath": "../lib/start.js"
     }
   ],
 
-  "options": {
-    "--no-color": {
-      "optionType": "flag",
+  "parameters": [
+    {
+      "longName": "--no-color",
+      "parameterType": "flag",
       "description": "disable colors in the build log, defaults to 'true'",
       "associatedCommands": [ "build", "clean" ]
     },
 
-    "--production": {
-      "optionType": "flag",
+    {
+      "longName": "--production",
+      "parameterType": "flag",
       "description": "Perform a production build, including minification and localization steps",
       "associatedCommands": [ "build" ]
     }
-  }
+  ]
 }
