--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,18 @@
 language: node_js
 node_js:
   - '8.9.4'
-before_script:
-  - node common/scripts/ci-rush.js
 script:
   - set -e
-  - echo 'Checking change file...' && echo -en 'travis_fold:start:check\\r'
+  - echo 'Checking change file...' && echo -en 'travis_fold:start:change\\r'
   - git fetch origin master:refs/remotes/origin/master -a
-  - node common/temp/ci-rush/node_modules/@microsoft/rush/lib/start.js change -v
+  - node common/scripts/install-run-rush.js rush change -v
+  - echo -en 'travis_fold:end:change\\r'
+  - echo 'Running rush check' && echo -en 'travis_fold:start:check\\r'
+  - node common/scripts/install-run-rush.js rush check
   - echo -en 'travis_fold:end:check\\r'
   - echo 'Installing...' && echo -en 'travis_fold:start:install\\r'
-  - node common/temp/ci-rush/node_modules/@microsoft/rush/lib/start.js install --bypass-policy
+  - node common/scripts/install-run-rush.js rush install --bypass-policy
   - echo -en 'travis_fold:end:install\\r'
-  - echo 'Running rush check' && echo -en 'travis_fold:start:check\\r'
-  - node common/temp/ci-rush/node_modules/@microsoft/rush/lib/start.js check
-  - echo -en 'travis_fold:end:check\\r'
   - echo 'Building...' && echo -en 'travis_fold:start:build\\r'
-  - node common/temp/ci-rush/node_modules/@microsoft/rush/lib/start.js rebuild --verbose --production
+  - node common/scripts/install-run-rush.js rush rebuild --verbose --production
   - echo -en 'travis_fold:end:build\\r'
