--- a/common/config/rush/nonbrowser-approved-packages.json
+++ b/common/config/rush/nonbrowser-approved-packages.json
@@ -430,6 +430,10 @@
       "allowedCategories": [ "libraries" ]
     },
     {
+      "name": "ts-jest",
+      "allowedCategories": [ "libraries" ]
+    },
+    {
       "name": "tslint",
       "allowedCategories": [ "libraries" ]
     },
