--- a/core-build/gulp-core-build-typescript/tsconfig.json
+++ b/core-build/gulp-core-build-typescript/tsconfig.json
@@ -13,7 +13,8 @@
     "lib": [
       "es5",
       "es2015.iterable",
-      "es2015.collection"
+      "es2015.collection",
+      "es2015.promise"
     ]
   }
 }
