Add test cases for `@eventproperty`

--- a/build-tests/api-extractor-test-05/etc/yaml/api-extractor-test-05.yml
+++ b/build-tests/api-extractor-test-05/etc/yaml/api-extractor-test-05.yml
@@ -12,6 +12,9 @@ items:
     type: package
     children:
       - api-extractor-test-05.DocClass1
+      - api-extractor-test-05.SystemEvent
 references:
   - uid: api-extractor-test-05.DocClass1
     name: DocClass1
+  - uid: api-extractor-test-05.SystemEvent
+    name: SystemEvent
