--- a/build-tests/api-extractor-test-05/etc/yaml/api-extractor-test-05/docclass1.yml
+++ b/build-tests/api-extractor-test-05/etc/yaml/api-extractor-test-05/docclass1.yml
@@ -12,6 +12,9 @@ items:
     children:
       - api-extractor-test-05.DocClass1.exampleFunction
       - api-extractor-test-05.DocClass1.interestingEdgeCases
+      - api-extractor-test-05.DocClass1.malformedEvent
+      - api-extractor-test-05.DocClass1.modifiedEvent
+      - api-extractor-test-05.DocClass1.regularProperty
       - api-extractor-test-05.DocClass1.tableExample
   - uid: api-extractor-test-05.DocClass1.exampleFunction
     summary: This is an overloaded function.
@@ -51,6 +54,42 @@ items:
         type:
           - void
         description: ''
+  - uid: api-extractor-test-05.DocClass1.malformedEvent
+    summary: This event should have been marked as readonly.
+    name: malformedEvent
+    fullName: api-extractor-test-05.DocClass1.malformedEvent
+    langs:
+      - typeScript
+    type: event
+    syntax:
+      content: 'malformedEvent: SystemEvent;'
+      return:
+        type:
+          - SystemEvent
+  - uid: api-extractor-test-05.DocClass1.modifiedEvent
+    summary: This event is fired whenever the object is modified.
+    name: modifiedEvent
+    fullName: api-extractor-test-05.DocClass1.modifiedEvent
+    langs:
+      - typeScript
+    type: event
+    syntax:
+      content: 'readonly modifiedEvent: SystemEvent;'
+      return:
+        type:
+          - SystemEvent
+  - uid: api-extractor-test-05.DocClass1.regularProperty
+    summary: This is a regular property that happens to use the SystemEvent type.
+    name: regularProperty
+    fullName: api-extractor-test-05.DocClass1.regularProperty
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'regularProperty: SystemEvent;'
+      return:
+        type:
+          - SystemEvent
   - uid: api-extractor-test-05.DocClass1.tableExample
     summary: 'An example with tables:'
     remarks: <table> <tr> <td>John</td> <td>Doe</td> </tr> </table>
