--- a/core-build/gulp-core-build-webpack/package.json
+++ b/core-build/gulp-core-build-webpack/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@microsoft/gulp-core-build-mocha",
-  "version": "3.3.24",
+  "name": "@microsoft/gulp-core-build-webpack",
+  "version": "3.4.0",
   "description": "",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -13,19 +13,21 @@
     "build": "gulp --clean"
   },
   "dependencies": {
-    "@microsoft/gulp-core-build": "rush-managed",
+    "@microsoft/gulp-core-build": "3.7.4",
+    "@types/gulp": "3.8.32",
     "@types/node": "8.5.8",
+    "colors": "~1.2.1",
     "gulp": "~3.9.1",
-    "gulp-istanbul": "~0.10.3",
-    "gulp-mocha": "~2.2.0"
+    "gulp-util": "~3.0.7",
+    "webpack": "~3.11.0"
   },
   "devDependencies": {
     "@microsoft/node-library-build": "4.3.28",
-    "@types/gulp": "3.8.32",
-    "@types/gulp-istanbul": "0.9.30",
-    "@types/gulp-mocha": "0.0.29",
-    "@types/mocha": "2.2.38",
     "@types/orchestrator": "0.0.30",
-    "@types/q": "0.0.32"
+    "@types/q": "0.0.32",
+    "@types/source-map": "0.5.0",
+    "@types/tapable": "0.2.4",
+    "@types/uglify-js": "2.6.29",
+    "@types/webpack": "3.8.11"
   }
 }
