--- a/apps/api-documenter/package.json
+++ b/apps/api-documenter/package.json
@@ -15,15 +15,15 @@
     "api-documenter": "./bin/api-documenter"
   },
   "dependencies": {
-    "@microsoft/api-extractor": "rush-managed",
-    "@microsoft/node-core-library": "rush-managed",
-    "@microsoft/ts-command-line": "rush-managed",
+    "@microsoft/api-extractor": "5.6.6",
+    "@microsoft/node-core-library": "1.2.0",
+    "@microsoft/ts-command-line": "4.1.0",
     "colors": "~1.2.1",
     "fs-extra": "~5.0.0",
     "js-yaml": "~3.9.1"
   },
   "devDependencies": {
-    "@microsoft/node-library-build": "rush-managed",
+    "@microsoft/node-library-build": "4.3.35",
     "@types/fs-extra": "5.0.1",
     "@types/js-yaml": "3.9.1",
     "@types/node": "8.5.8",
