--- a/apps/api-extractor/package.json
+++ b/apps/api-extractor/package.json
@@ -31,8 +31,8 @@
     "build": "gulp test --clean"
   },
   "dependencies": {
-    "@microsoft/node-core-library": "rush-managed",
-    "@microsoft/ts-command-line": "rush-managed",
+    "@microsoft/node-core-library": "1.2.0",
+    "@microsoft/ts-command-line": "4.1.0",
     "@types/fs-extra": "5.0.1",
     "@types/node": "8.5.8",
     "@types/z-schema": "3.16.31",
