--- a/apps/rush/package.json
+++ b/apps/rush/package.json
@@ -30,14 +30,14 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@microsoft/node-core-library": "rush-managed",
-    "@microsoft/rush-lib": "rush-managed",
+    "@microsoft/node-core-library": "1.2.0",
+    "@microsoft/rush-lib": "5.0.0-dev.9",
     "colors": "~1.2.1",
     "fs-extra": "~5.0.0",
     "semver": "~5.3.0"
   },
   "devDependencies": {
-    "@microsoft/node-library-build": "rush-managed",
+    "@microsoft/node-library-build": "4.3.35",
     "@types/chai": "3.4.34",
     "@types/fs-extra": "5.0.1",
     "@types/mocha": "2.2.38",
