--- a/core-build/gulp-core-build-sass/package.json
+++ b/core-build/gulp-core-build-sass/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@microsoft/gulp-core-build-serve",
-  "version": "3.2.26",
+  "name": "@microsoft/gulp-core-build-sass",
+  "version": "4.3.15",
   "description": "",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -13,29 +13,29 @@
     "build": "gulp --clean"
   },
   "dependencies": {
-    "@microsoft/gulp-core-build": "rush-managed",
+    "@microsoft/gulp-core-build": "3.7.4",
+    "@microsoft/load-themed-styles": "1.7.54",
     "@types/node": "8.5.8",
-    "colors": "~1.2.1",
-    "deasync": "~0.1.7",
-    "express": "~4.16.2",
+    "autoprefixer": "6.3.7",
     "gulp": "~3.9.1",
-    "gulp-connect": "~5.5.0",
-    "gulp-open": "~2.0.0",
-    "gulp-util": "~3.0.7",
-    "node-forge": "~0.7.1",
-    "sudo": "~1.0.3"
+    "gulp-clean-css": "~3.0.4",
+    "gulp-clip-empty-files": "~0.1.2",
+    "gulp-clone": "~1.0.0",
+    "gulp-postcss": "~6.3.0",
+    "gulp-sass": "~3.1.0",
+    "gulp-sourcemaps": "~2.6.4",
+    "gulp-texttojs": "~1.0.3",
+    "merge2": "~1.0.2",
+    "postcss-modules": "~0.6.4",
+    "through2": "~2.0.1"
   },
   "devDependencies": {
     "@microsoft/node-library-build": "4.3.28",
-    "@types/express": "4.11.0",
-    "@types/express-serve-static-core": "4.11.0",
     "@types/gulp": "3.8.32",
     "@types/gulp-util": "3.0.30",
     "@types/mime": "0.0.29",
-    "@types/node-forge": "0.6.8",
     "@types/orchestrator": "0.0.30",
     "@types/q": "0.0.32",
-    "@types/serve-static": "1.13.1",
     "@types/through2": "2.0.32",
     "@types/vinyl": "1.2.30"
   }
