--- a/core-build/web-library-build/package.json
+++ b/core-build/web-library-build/package.json
@@ -15,12 +15,12 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "dependencies": {
-    "@microsoft/gulp-core-build": "rush-managed",
-    "@microsoft/gulp-core-build-karma": "rush-managed",
-    "@microsoft/gulp-core-build-sass": "rush-managed",
-    "@microsoft/gulp-core-build-serve": "rush-managed",
-    "@microsoft/gulp-core-build-typescript": "rush-managed",
-    "@microsoft/gulp-core-build-webpack": "rush-managed",
+    "@microsoft/gulp-core-build": "10000.10000.10000",
+    "@microsoft/gulp-core-build-karma": "4.5.0",
+    "@microsoft/gulp-core-build-sass": "4.3.15",
+    "@microsoft/gulp-core-build-serve": "3.2.26",
+    "@microsoft/gulp-core-build-typescript": "4.9.8",
+    "@microsoft/gulp-core-build-webpack": "3.4.0",
     "@types/gulp": "3.8.32",
     "@types/node": "8.5.8",
     "gulp": "~3.9.1",
