--- a/libraries/load-themed-styles/package.json
+++ b/libraries/load-themed-styles/package.json
@@ -19,6 +19,6 @@
     "@types/webpack-env": "1.13.0",
     "chai": "~3.5.0",
     "gulp": "~3.9.1",
-    "@microsoft/node-library-build": "rush-managed"
+    "@microsoft/node-library-build": "4.3.35"
   }
 }
