--- a/libraries/ts-command-line/package.json
+++ b/libraries/ts-command-line/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@microsoft/stream-collator",
-  "version": "2.2.35",
-  "description": "Display intelligible realtime output from your asynchronous streams",
+  "name": "@microsoft/ts-command-line",
+  "version": "4.1.0",
+  "description": "An object-oriented command-line parser for TypeScript",
   "repository": {
     "type": "git",
     "url": "https://github.com/microsoft/web-build-tools"
   },
   "main": "lib/index.js",
-  "typings": "dist/stream-collator.d.ts",
+  "typings": "dist/index-internal.d.ts",
   "tsdoc": {
     "tsdocFlavor": "AEDoc"
   },
@@ -16,15 +16,14 @@
   },
   "license": "MIT",
   "dependencies": {
+    "argparse": "~1.0.9",
+    "@types/argparse": "1.0.33",
     "colors": "~1.2.1",
     "@types/node": "8.5.8"
   },
   "devDependencies": {
-    "@types/chai": "3.4.34",
-    "@types/mocha": "2.2.38",
-    "chai": "~3.5.0",
+    "@types/jest": "21.1.10",
     "gulp": "~3.9.1",
-    "mocha": "~3.4.2",
-    "@microsoft/node-library-build": "rush-managed"
+    "@microsoft/node-library-build": "4.3.28"
   }
 }
