--- a/webpack/loader-set-webpack-public-path/package.json
+++ b/webpack/loader-set-webpack-public-path/package.json
@@ -21,6 +21,6 @@
     "chai": "~3.5.0",
     "gulp": "~3.9.1",
     "mocha": "~3.4.2",
-    "@microsoft/node-library-build": "rush-managed"
+    "@microsoft/node-library-build": "4.3.35"
   }
 }
