Add a build test that repros the mocha error

--- a/common/config/rush/nonbrowser-approved-packages.json
+++ b/common/config/rush/nonbrowser-approved-packages.json
@@ -51,7 +51,7 @@
     },
     {
       "name": "@microsoft/node-library-build",
-      "allowedCategories": [ "libraries" ]
+      "allowedCategories": [ "libraries", "tests" ]
     },
     {
       "name": "@microsoft/package-deps-hash",
