--- a/core-build/gulp-core-build-serve/tsconfig.json
+++ b/core-build/gulp-core-build-serve/tsconfig.json
@@ -1,27 +1,6 @@
 {
-  // Put this back and remove the rest when node-library-build has been re-published
-  // "extends": "./node_modules/@microsoft/rush-stack/includes/tsconfig-node.json",
-  // "compilerOptions": {
-  //   "strictNullChecks": false
-  // }
-
+  "extends": "./node_modules/@microsoft/rush-stack-compiler/includes/tsconfig-node.json",
   "compilerOptions": {
-    "target": "es6",
-    "forceConsistentCasingInFileNames": true,
-    "module": "commonjs",
-    "declaration": true,
-    "sourceMap": true,
-    "experimentalDecorators": true,
-    "types": [
-      "node"
-    ],
-    "lib": [
-      "es5",
-      "scripthost",
-      "es2015.collection",
-      "es2015.promise",
-      "es2015.iterable",
-      "dom"
-    ]
+    "strictNullChecks": false
   }
 }
