--- a/libraries/node-core-library/tsconfig.json
+++ b/libraries/node-core-library/tsconfig.json
@@ -3,24 +3,29 @@
   // "extends": "./node_modules/@microsoft/rush-stack/includes/tsconfig-node.json"
 
   "compilerOptions": {
-    "target": "es6",
-    "forceConsistentCasingInFileNames": true,
+    "outDir": "./lib",
+
     "module": "commonjs",
+    "target": "es6",
+    "lib": [
+      "es5",
+      "es2015.collection",
+      "es2015.iterable",
+      "es2015.promise"
+    ],
+    "forceConsistentCasingInFileNames": true,
+    "jsx": "react",
     "declaration": true,
     "sourceMap": true,
     "experimentalDecorators": true,
-    "strictNullChecks": true,
-    "types": [
-      "node",
-      "jest"
-    ],
-    "lib": [
-      "es5",
-      "scripthost",
-      "es2015.collection",
-      "es2015.promise",
-      "es2015.iterable",
-      "dom"
-    ]
-  }
+    "strictNullChecks": true
+  },
+  "include": [
+    "./src/**/*.ts",
+    "./src/**/*.tsx"
+  ],
+  "exclude": [
+    "./node_modules",
+    "./lib"
+  ]
 }
