--- a/libraries/ts-command-line/package.json
+++ b/libraries/ts-command-line/package.json
@@ -22,6 +22,7 @@
     "@types/node": "8.5.8"
   },
   "devDependencies": {
+    "tslint-microsoft-contrib": "~5.2.1",
     "@types/jest": "21.1.10",
     "gulp": "~3.9.1",
     "@microsoft/node-library-build": "4.4.11"
