--- a/stack/rush-stack/tsconfig.json
+++ b/stack/rush-stack/tsconfig.json
@@ -1,25 +1,3 @@
 {
-  // Put this back and remove the rest when node-library-build has been re-published
-  // "extends": "./node_modules/@microsoft/rush-stack-compiler/includes/tsconfig-node.json"
-
-  "compilerOptions": {
-    "target": "es6",
-    "forceConsistentCasingInFileNames": true,
-    "module": "commonjs",
-    "declaration": true,
-    "sourceMap": true,
-    "experimentalDecorators": true,
-    "strictNullChecks": true,
-    "types": [
-      "node"
-    ],
-    "lib": [
-      "es5",
-      "scripthost",
-      "es2015.collection",
-      "es2015.promise",
-      "es2015.iterable",
-      "dom"
-    ]
-  }
+  "extends": "./node_modules/@microsoft/rush-stack-compiler/includes/tsconfig-node.json"
 }
