--- a/stack/rush-stack/package.json
+++ b/stack/rush-stack/package.json
@@ -1,8 +1,22 @@
 {
   "name": "@microsoft/rush-stack",
   "version": "0.0.1",
-  "private": true,
-  "description": "",
+  "description": "A standardized toolchain for building JavaScript projects in a Rush monorepo",
+  "license": "MIT",
+  "keywords": [
+    "rush",
+    "toolchain",
+    "build",
+    "fast",
+    "incremental",
+    "integrated",
+    "monorepo",
+    "gulp"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/microsoft/web-build-tools"
+  },
   "main": "lib/start.js",
   "bin": {
     "rush-stack": "./bin/rush-stack"
