Fixing an issue where a few things were missing from .npmignores.

--- a/stack/rush-stack-compiler/.npmignore
+++ b/stack/rush-stack-compiler/.npmignore
@@ -5,7 +5,9 @@
 !/bin/**
 !/lib/**
 !/dist/**
+!/includes/**
 !ThirdPartyNotice.txt
+
 
 # Ignore certain files in the above folder
 /dist/*.stats.*
