Including an empty types array.

--- a/stack/rush-stack-compiler/includes/tsconfig-base.json
+++ b/stack/rush-stack-compiler/includes/tsconfig-base.json
@@ -9,7 +9,8 @@
     "declaration": true,
     "sourceMap": true,
     "experimentalDecorators": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "types": []
   },
   "include": [
     "../../../../src/**/*.ts",
