--- a/apps/rush-lib/tsconfig.json
+++ b/apps/rush-lib/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "extends": "./node_modules/@microsoft/rush-stack-compiler/includes/tsconfig-node.json",
+  "compilerOptions": {
+    "types": [
+      "jest"
+    ]
+  },
   "include": [
     "./typings/tsd.d.ts",
     "./src/**/*.ts",
