--- a/libraries/stream-collator/tsconfig.json
+++ b/libraries/stream-collator/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "./node_modules/@microsoft/rush-stack-compiler/includes/tsconfig-node.json",
   "compilerOptions": {
-    "strictNullChecks": false
+    "strictNullChecks": false,
+    "types": [
+      "node"
+    ]
   }
 }
